--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "formidable": "^1.2.1",
     "jquery": "^3.4.1",
+    "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "path": "^0.12.7",
     "popper.js": "^1.15.0",
