--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "formidable": "^1.2.1",
     "jquery": "^3.4.1",
+    "node-schedule": "^1.3.2",
     "passport": "^0.4.0",
     "path": "^0.12.7",
     "popper.js": "^1.15.0",
